# OneAPI

./: CMakeLists.txt  Makefile  README.md  build.sh  install_basekit.sh  q  run.sh
include/: benchOneAPI.h  vec_add.cpp
src/: benchOneAPI.cpp  matmat.cpp  matmat_omp.cpp  mvec.cpp  vecdot.cpp
tex/: report.tex
